--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,9 @@
+@import "normalize.css";
 body {
-  margin: 0;
+  margin: 0 auto;
+  background: #202020;
+  color: #FFFFFF;
+  max-width: 1280px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -11,3 +15,5 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
