--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -1,21 +1,42 @@
 .about-project {
     max-width: 1140px;
-    min-height: 600px;
-    margin: 0 auto;
+    min-height: 608px;
+    margin: 110px auto auto auto;
 }
 
-.title {
-    border-bottom: 1px solid #DADADA;
-    padding: 23px;
+.chapter {
+
+}
+
+.chapter__title {
+    margin: 0;
+    color: #FFF;
+    font-family: Inter, serif;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -0.8px;
+}
+
+.chapter__text {
+    margin: 26px 0 0 0;
+    color: #FFF;
+    font-family: Inter, serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px; /* 142.857% */
 }
 
 .about-project__description {
+    margin-top: 70px;
     display: flex;
     justify-content: space-between;
 }
 
 .duration {
-
+    margin-top: 110px;
     display: grid;
     grid-template-columns: 20% 80%;
     grid-template-rows: 36px;
@@ -47,6 +68,7 @@
 }
 
 .action {
+    margin-top: 14px;
     display: grid;
     grid-template-columns: 20% 80%;
     grid-template-rows: 36px;
@@ -68,4 +90,9 @@
     justify-content: center;
     align-items: center;
 
+}
+
+.action__backend > p,
+.action__frontend > p {
+    margin: 0;
 }
