--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -11,3 +11,28 @@
     height: 38px;
     background-image: url('../../images/logo.svg');
 }
+
+.header__btn {
+    width: 76px;
+    height: 32px;
+    margin-right: 30px;
+    flex-shrink: 0;
+    border: none;
+    border-radius: 3px;
+    background: #3DDC84;
+    outline: none;
+    cursor: pointer;
+
+}
+
+.header__btn:last-child {
+    margin-right: 0;
+}
+
+.header__btn_bg_none {
+    border: none;
+    background: none;
+    outline: none;
+    color: #FFFFFF;
+
+}
