--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -1,14 +1,3 @@
-.promo__title {
-    color: #FFF;
-    text-align: center;
-    font-family: Inter, serif;
-    font-size: 50px;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 58px; /* 116% */
-    letter-spacing: -2px;
-}
-
 .promo {
     display: flex;
     flex-direction: column;
@@ -22,6 +11,18 @@
     background: #272727;
 }
 
-.NavTab {
-    width: 100%;
+.promo__title {
+    max-width: 730px;
+    color: #FFF;
+    text-align: center;
+    font-family: Inter, serif;
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 58px; /* 116% */
+    letter-spacing: -2px;
 }
+
+
+
+
