--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,60 @@
 @import "normalize.css";
+
+@font-face {
+    font-display: swap;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    src: url('./fonts/Inter-Regular.woff') format('woff');
+    src: url('./fonts/Inter-Regular.woff2') format('woff2');
+
+}
+
+@font-face {
+    font-display: swap;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 500;
+    src: url('./fonts/Inter-Medium.woff') format('woff');
+    src: url('./fonts/Inter-Medium.woff2') format('woff2');
+
+}
+
+* {
+    box-sizing: border-box;
+}
+
 body {
-  margin: 0 auto;
-  background: #202020;
-  color: #FFFFFF;
-  max-width: 1280px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    margin: 0 auto;
+    background: #202020;
+    color: #FFFFFF;
+    max-width: 1280px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
+.hr {
+    height: 1px;
+    background: #DADADA;
+    margin: 23px 0 0 0;
 
+}
+
+.title {
+    color: #FFF;
+    font-family: Inter, serif;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: -0.88px;
+    margin: 0;
+}
