--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,4 +1,6 @@
 .header {
+    max-width: 1280px;
+    margin: 0 auto;
     display: flex;
     justify-content: space-between;
     padding: 0 70px;
