--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -1,6 +1,13 @@
+.techs_bg_grey {
+    background: #272727;
+}
+
 .techs {
     max-width: 1140px;
     margin: 0 auto;
+    padding-top: 100px;
+    background-size: 100vw;
+    min-height: 625px;
 }
 
 .techs__wrapper {
@@ -11,14 +18,31 @@
 }
 
 .techs__subtitle {
-
+    max-width: 600px;
+    color: #FFF;
+    text-align: center;
+    font-family: Inter, serif;
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 58px; /* 116% */
+    letter-spacing: -2px;
 }
 
 .techs__text {
-
+    max-width: 460px;
+    color: #FFF;
+    text-align: center;
+    font-family: Inter, serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 20px; /* 142.857% */
+    letter-spacing: -0.56px;
 }
 
 .techs-list {
+    margin-top: 100px;
     display: flex;
     justify-content: center;
     align-items: center;
