--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,9 +1,11 @@
 .footer {
     max-width: 1140px;
-    margin: 0 auto;
+    margin: 125px auto 0 auto;
 }
 
 .footer__title {
+    border-bottom: 1px solid #424242;
+    padding-bottom: 20px;
     color: #8B8B8B;
     text-align: center;
     font-feature-settings: 'clig' off, 'liga' off;
@@ -32,6 +34,7 @@
 .footer-list {
     display: flex;
     flex-direction: row;
+    list-style: none;
 }
 
 .footer-list__item {
@@ -39,6 +42,7 @@
 }
 
 .footer__link {
+    text-decoration: none;
     color: #FFF;
     text-align: right;
     font-feature-settings: 'clig' off, 'liga' off;
