--- a/src/components/NavTab/NavTab.module.css
+++ b/src/components/NavTab/NavTab.module.css
@@ -1,9 +1,11 @@
 .navTab {
- width: 100%;
-
+    margin-top: 101px;
+    width: 100%;
+    padding-bottom: 13px;
 }
 
 .navTabList {
+    padding: 0;
     list-style: none;
     display: flex;
     justify-content: center;
@@ -20,6 +22,11 @@
     background: #303030;
     align-items: center;
     justify-content: center;
+
+}
+
+.navTabItem:last-child {
+    margin: 0;
 
 }
 
