--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,22 +1,24 @@
 .footer {
     max-width: 1140px;
-    margin: 125px auto 0 auto;
+    margin: 184px auto 0 auto;
 }
 
 .footer__title {
+    margin: 0;
     border-bottom: 1px solid #424242;
     padding-bottom: 20px;
     color: #8B8B8B;
     text-align: center;
     font-feature-settings: 'clig' off, 'liga' off;
     font-family: Inter, serif;
-    font-size: 13px;
+    font-size: 10px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
 }
 
 .copyright {
+    margin: 0;
     color: #FFF;
     font-feature-settings: 'clig' off, 'liga' off;
     font-family: Inter, serif;
@@ -24,14 +26,18 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    text-align: center;
 }
 
 .footer-nav {
+    margin: 17px 0 0 0;
     display: flex;
     justify-content: space-between;
 }
 
 .footer-list {
+    margin: 0;
+    padding: 0;
     display: flex;
     flex-direction: row;
     list-style: none;
@@ -51,4 +57,8 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+}
+
+.footer-list__item:last-child {
+    margin-right: 0;
 }
