--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,7 @@
 .footer {
     max-width: 1140px;
     margin: 184px auto 0 auto;
+    padding-bottom: 20px;
 }
 
 .footer__title {
@@ -11,10 +12,11 @@
     text-align: center;
     font-feature-settings: 'clig' off, 'liga' off;
     font-family: Inter, serif;
-    font-size: 10px;
+    font-size: 13px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+
 }
 
 .copyright {
