--- a/src/components/Title/Title.css
+++ b/src/components/Title/Title.css
@@ -8,3 +8,10 @@
     letter-spacing: -0.88px;
     margin: 0;
 }
+
+.hr__title {
+    height: 1px;
+    border-color: #DADADA;
+    margin: 23px 0 0 0;
+
+}
