JSX & CSS: MoviesCardList & MoviesCard

--- a/src/components/FilterCheckbox/FilterCheckbox.css
+++ b/src/components/FilterCheckbox/FilterCheckbox.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin: 30px 0 40px 0;
 }
 
 .slider {
@@ -49,4 +50,8 @@
 
 .slider input:checked + .slider-btn:before {
     transform: translateX(15px);
+}
+
+.slider__name {
+    margin-left: 10px;
 }
