--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -1,33 +1,25 @@
 .login {
-    margin: 60px auto 0 auto;
+    margin: 70px auto 0 auto;
     max-width: 400px;
     display: flex;
-    justify-content: center;
-    align-items: center;
     flex-direction: column;
 
 }
 
 .login__welcome {
-    margin: 0;
+    width: 100%;
+    margin: 40px 0 0 0;
     padding: 0;
-
-    font-family: 'Inter', serif;
-    font-style: normal;
-    font-weight: 900;
+    color: #FFF;
+    font-family: Inter, serif;
     font-size: 24px;
-    line-height: 29px;
-    /* identical to box height */
-
-    text-align: center;
-
-    color: #FFFFFF;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
 }
 
 .login__form {
-    margin-top: 20px;
     width: 100%;
-    min-height: 400px;
     display: flex;
     justify-content: start;
     align-items: center;
@@ -42,15 +34,30 @@
 
 }
 
+.login__form label {
+    margin-top: 20px;
+    width: 100%;
+    color: #8B8B8B;
+    font-family: Inter, serif;
+    font-size: 10px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+
+}
+
+.login__form label:first-child {
+    margin-top: 40px;
+}
+
 .login__form input {
+    width: 100%;
     border: none;
     padding-left: 10px;
     border-radius: 8px;
     background: #2F2F2F;
-    width: 396px;
     height: 46px;
-    margin-top: 40px;
-
+    margin-top: 10px;
     color: #FFF;
     font-family: Inter, serif;
     font-size: 13px;
@@ -70,80 +77,75 @@
     color: #FFFFFF;
 }
 
-.login__button-container {
-    display: flex;
-    margin-top: auto;
-    justify-content: center;
-    position: relative;
-    bottom: 0;
-    left: 0;
-    /*margin-top: 180px;*/
-    width: 100%;
-    height: 10%;
-    background-color: #fff;
-    border-radius: 2px;
-    transition: ease 0.4s;
-}
-
-.login__button-container:hover {
-    opacity: 0.6;
-}
-
-
-.login__link {
-    width: 100%;
-    cursor: pointer;
-    text-align: center;
-    min-height: 50px;
-    padding: 0;
+.login__button {
     border: none;
-    background-color: rgba(0, 0, 0, 0);
-    color: #000000;
-    font-size: 16px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 3px;
+    background: #4285F4;
+    margin-top: 180px;
+    width: 100%;
+    height: 45px;
+    transition: ease 0.4s;
+    cursor: pointer;
+    color: #fff;
 }
+
+.login__button:hover {
+    background-color: rgba(66, 133, 244, 0.6);
+}
+
+
+
+/*.login__link {*/
+/*    width: 100%;*/
+/*    cursor: pointer;*/
+/*    text-align: center;*/
+/*    min-height: 50px;*/
+/*    padding: 0;*/
+/*    border: none;*/
+/*    background-color: rgba(0, 0, 0, 0);*/
+/*    color: #000000;*/
+/*    font-size: 16px;*/
+/*}*/
 
 .login__signin {
     width: 100%;
     display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    font-family: 'Inter', serif;
+    justify-content: center;
+    color: #8B8B8B;
+    text-align: center;
+    font-family: Inter, serif;
+    font-size: 14px;
     font-style: normal;
     font-weight: 400;
-    font-size: 14px;
-    line-height: 17px;
-    /* identical to box height */
-
-    text-align: center;
-
-    color: #FFFFFF;
+    line-height: normal;
 }
 
-.register__signin {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    flex-wrap: wrap;
-    font-family: 'Inter', serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 17px;
-    /* identical to box height */
 
-    text-align: center;
-
-    color: #FFFFFF;
-}
-
-.register__login-link {
+.login__link {
+    margin-left: 6px;
     text-decoration: none;
-    color: #fff;
+    color: #4285F4;
     transition: ease 0.4s;
+    cursor: pointer;
 }
 
 .register__login-link:hover {
     opacity: 0.6;
+}
+
+
+.login__form span {
+    display: block;
+    margin-top: 10px;
+    width: 100%;
+    color: #EE3465;
+    font-family: Inter, serif;
+    font-size: 10px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    text-align: start;
 }
