--- a/src/pages/Movies/Movies.css
+++ b/src/pages/Movies/Movies.css
@@ -16,7 +16,7 @@
     width: 320px;
     min-height: 36px;
     background: transparent;
-    margin: 80px auto 0 auto;
+    margin: 75px auto -25px auto;
     display: block;
     color: #fff;
     text-align: center;
