--- a/src/components/FilterCheckbox/FilterCheckbox.css
+++ b/src/components/FilterCheckbox/FilterCheckbox.css
@@ -2,7 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 30px 0 40px 0;
+    margin: 30px 0 39px 0;
 }
 
 .slider {
@@ -10,7 +10,7 @@
     display: flex;
     justify-content: center;
     width: 36px;
-    height: 20px;
+    height: 15px;
 }
 
 .slider input {
@@ -34,10 +34,10 @@
 .slider .slider-btn:before {
     position: absolute;
     content: "";
-    height: 18px;
-    width: 18px;
+    height: 12px;
+    width: 12px;
     left: 2px;
-    bottom: 1px;
+    bottom: 2px;
     background-color: white;
     transition: .4s;
     border-radius: 50%;
@@ -49,14 +49,15 @@
 }
 
 .slider input:checked + .slider-btn:before {
-    transform: translateX(15px);
+    transform: translateX(19px);
 }
 
 .slider__name {
+    max-width: 150px;
     margin-left: 10px;
     color: #FFF;
     font-family: Inter, serif;
-    font-size: 11px;
+    font-size: 12px;
     font-style: normal;
     font-weight: 400;
     line-height: 18px; /* 163.636% */
