--- a/src/components/MoviesCard/MoviesCard.css
+++ b/src/components/MoviesCard/MoviesCard.css
@@ -10,15 +10,15 @@
     position: absolute;
     top: 14px;
     right: 14px;
-    max-width: 72px;
+    width: 72px;
     height: 21px;
+    align-items: center;
     border-radius: 30px;
     background: #313131;
     border: none;
-
     display: flex;
-    flex-direction: column;
     justify-content: center;
+    flex-direction: column;
 
     color: #FFF;
     text-align: center;
@@ -30,7 +30,7 @@
     cursor: pointer;
 }
 
-.card__saved{
+.card__saved {
     position: absolute;
     top: 14px;
     right: 14px;
@@ -42,7 +42,8 @@
 
 .card__description {
     display: flex;
-    justify-content: space-between;
+    margin-top: 11px;
+    justify-content: space-around;
     align-items: center;
 }
 
@@ -53,7 +54,7 @@
 }
 
 .card__title {
-    margin: 14px 0 0 0;
+    margin: 0;
     width: 250px;
     color: #FFF;
     font-family: Inter, serif;
@@ -68,7 +69,6 @@
     justify-content: center;
     align-items: center;
     text-align: center;
-    margin: 14px 0 0 0;
     width: 52px;
     height: 18px;
     border-radius: 3px;
@@ -77,7 +77,6 @@
 
 .duration__text {
     margin: 0;
-
     width: 44px;
     height: 12px;
     color: #8B8B8B;
