--- a/src/components/MoviesCardList/MoviesCardList.css
+++ b/src/components/MoviesCardList/MoviesCardList.css
@@ -1,6 +1,6 @@
 .card-list__wrapper {
     max-width: 1200px;
-    margin: 80px auto 0 auto;
+    margin: 78px auto 0 auto;
     /*margin: 80px 30px 0 30px;*/
     /*padding-right: 30px;*/
     /*padding-left: 30px;*/
@@ -10,12 +10,14 @@
 }
 
 .card-list {
+    margin: 1px 0 0 0;
     width: 100%;
     padding: 0 30px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     grid-auto-rows: auto;
     grid-gap: 30px;
+    row-gap: 57px;
     grid-auto-flow: row;
     justify-content: center;
     align-content: center;
