--- a/src/pages/Movies/Movies.css
+++ b/src/pages/Movies/Movies.css
@@ -4,6 +4,10 @@
 
 }
 
+.movies .footer {
+    margin-top: 159px;
+}
+
 .movies__hr {
     width: 90%;
     height: 1px;
@@ -16,7 +20,7 @@
     width: 320px;
     min-height: 36px;
     background: transparent;
-    margin: 75px auto -25px auto;
+    margin: 75px auto 0 auto;
     display: block;
     color: #fff;
     text-align: center;
