width 768px: MainHeader, Promo, AboutProject

--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -6,7 +6,7 @@
 
 .about-me__wrapper {
     display: grid;
-    grid-template-columns: 600px 1fr;
+    grid-template-columns: fit-content(600px)  1fr;
     grid-auto-rows: auto;
     margin-top: 61px;
 }
@@ -68,4 +68,8 @@
     font-style: normal;
     font-weight: 500;
     line-height: normal;
+}
+
+@media (max-width: 769px) {
+
 }
