--- a/src/pages/Main/Main.css
+++ b/src/pages/Main/Main.css
@@ -1,3 +1,11 @@
+
 .main .footer {
     margin-top: 184px;
 }
+
+/*@media (max-width: 768px) {*/
+/*    .main{*/
+/*        margin: 0 20px 0 20px;*/
+
+/*    }*/
+/*}*/
