--- a/src/components/MainHeader/MainHeader.css
+++ b/src/components/MainHeader/MainHeader.css
@@ -32,3 +32,10 @@
     color: #FFFFFF;
 
 }
+
+@media (max-width: 768px) {
+    .header {
+        padding: 0 10px;
+        margin: 0 20px;
+    }
+}
