--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -24,5 +24,19 @@
 }
 
 
+@media (max-width: 768px) {
+    .promo {
+        padding-top: 180px;
+        margin: 20px 20px 0 20px;
 
+    }
 
+    .promo__title {
+        margin: 170px 0 0 0;
+        font-size: 40px;
+        max-width: 669px;;
+        line-height: 52px; /* 130% */
+        letter-spacing: -1.6px;
+
+    }
+}
