--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -7,8 +7,9 @@
 .about-me__wrapper {
     display: grid;
     grid-template-columns: fit-content(600px)  1fr;
-    grid-auto-rows: auto;
-    margin-top: 61px;
+    grid-auto-rows: 58px 20px 175px auto;
+    grid-gap: 19px;
+    margin-top: 65px;
 }
 
 .about-me__name {
@@ -40,7 +41,7 @@
 
 .about-me__description {
     max-width: 600px;
-    margin: 0;
+    margin: 6px 0 0 0;
     color: #FFF;
     font-feature-settings: 'clig' off, 'liga' off;
     font-family: Inter, serif;
@@ -55,8 +56,8 @@
     margin-left: 50px;
     grid-column: 2/3;
     grid-row: 1/4;
-    width: 255px;
-    height: 315px;
+    width: 270px;
+    height: 327px;
     border-radius: 10px;
     justify-self: end;
 }
