--- a/src/components/AboutProject/AboutProject.css
+++ b/src/components/AboutProject/AboutProject.css
@@ -22,7 +22,7 @@
 
 .chapter__text {
     max-width: 550px;
-    margin: 21px 0 0 0;
+    margin: 27px 0 0 0;
     color: #FFF;
     font-family: Inter, serif;
     font-size: 14px;
@@ -131,6 +131,7 @@
     }
 
     .chapter__text {
+        margin-top: 21px;
         font-size: 12px;
         line-height: 18px; /* 150% */
     }
