--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -1,7 +1,6 @@
 .portfolio {
     max-width: 1140px;
-    padding-top: 100px;
-    margin: 0 auto;
+    margin: 100px auto 0 auto;
 }
 
 .portfolio__title {
@@ -17,11 +16,11 @@
 }
 
 .portfolio-nav {
-    margin: 33px 0 0 0;
+    margin: 31px 0 0 0;
 }
 
 .nav-list {
-
+    margin: 0;
     padding: 0;
 }
 
@@ -62,4 +61,18 @@
     font-weight: 400;
     line-height: 60px; /* 200% */
     letter-spacing: -1.2px;
+}
+
+@media (max-width: 768px) {
+    .portfolio {
+        margin: 90px 50px 0 50px;
+    }
+    .nav-list {
+        margin: 0;
+    }
+    .portfolio__link {
+        font-size: 28px;
+        line-height: 50px; /* 178.571% */
+        letter-spacing: -1.12px;
+    }
 }
