--- a/src/pages/Main/Main.css
+++ b/src/pages/Main/Main.css
@@ -3,9 +3,9 @@
     margin-top: 184px;
 }
 
-/*@media (max-width: 768px) {*/
-/*    .main{*/
-/*        margin: 0 20px 0 20px;*/
+@media (max-width: 768px) {
+    .main .footer{
+        margin: 150px 30px 0 30px
 
-/*    }*/
-/*}*/
+    }
+}
