--- a/src/components/BurgerMenu/BurgerMenu.css
+++ b/src/components/BurgerMenu/BurgerMenu.css
@@ -1,41 +1,93 @@
 .burger-menu {
+    display: none;
     position: fixed;
     top: 0;
     right: 0;
     bottom: 0;
     width: 0;
-    background-color: #f1f1f1;
     overflow-x: hidden;
-    transition: width 0.3s ease;
+    background-color: rgba(0, 0, 0, 0);
+    transition:  background-color 0.4s;
+    z-index: 1;
 }
 
-.burger-menu__button {
+.burger-menu::before {
+    content: '';
     position: absolute;
-    top: 20px;
-    right: 20px;
-    width: 30px;
-    height: 3px;
-    background-color: #333;
-    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0);
+    opacity: 0;
+    pointer-events: none;
+    transition: opacity 0.4s;
 }
 
-.burger-menu__content {
-    width: calc(2/3 * 100vw);
-    height: 100%;
-    padding: 20px;
-    box-sizing: border-box;
-    transition: transform 0.3s ease;
-    transform: translateX(100%);
-}
-
-.burger-menu__link{
-
-}
-
-.burger-menu.open {
+.burger-menu_open {
+    background-color: rgba(0, 0, 0, 0.3);
     width: 100%;
 }
 
-.burger-menu.open .burger-menu__content {
-    transform: translateX(0);
+.burger-menu_open::before {
+    opacity: 1;
+    pointer-events: auto;
+}
+
+.burger-menu__button {
+    display: none;
+    position: absolute;
+    top: 15px;
+    right: 15px;
+    width: 44px;
+    height: 44px;
+    border: none;
+    cursor: pointer;
+    background-size: cover;
+    background-color: transparent;
+    background-image: url("../../images/icon__COLOR_icon-main.svg");
+    z-index: 2;
+
+}
+
+.burger-menu__link {
+}
+
+.burger-menu__profile {
+
+}
+
+.burger-menu__content {
+
+    margin: 0 0 0 auto;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    list-style: none;
+    background-color: #202020;
+    width: 68%;
+    height: 100vh;
+    box-sizing: border-box;
+    transform: translateX(100%);
+    transition: transform 0.4s ease;
+}
+
+.burger-menu_open .burger-menu__content {
+    transform: translateX(0%);
+}
+
+@media (max-width: 768px) {
+    .burger-menu {
+        display: block;
+
+    }
+
+    .burger-menu__button {
+        display: block;
+
+    }
+
 }
