--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -1,19 +1,24 @@
 .nav {
+    position: relative;
     max-width: 1280px;
-    margin: 0 auto;
     display: flex;
     justify-content: space-between;
     padding: 0 70px;
     min-height: 74px;
     align-items: center;
+    flex-shrink: 0;
+
 }
 
 .nav-list {
+    margin:  0 0 0 79px;
+
     padding: 0;
-    width: 100%;
     list-style: none;
     display: flex;
     justify-content: center;
+    text-align: center;
+    align-items: center;
 }
 
 /*.nav-list__item_position_end {*/
@@ -21,10 +26,32 @@
 /*}*/
 
 .nav-list__item {
+    margin:  0 16px 0 0;
+    width: fit-content;
+    height: 32px;
+    color: #FFF;
+    text-align: right;
+    font-family: Inter, serif;
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 18px; /* 138.462% */
 
-    margin: 0 16px 0 0;
-    color: #FFFFFF;
+    border: none;
+    border-radius: 20px;
+    background: #313131;
+    outline: none;
+    cursor: pointer;
 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+
+}
+
+.nav-list__item_bg_none {
+    background: none;
 }
 
 /*.nav-list__item:first-child {*/
@@ -37,15 +64,23 @@
 /*}*/
 
 .nav-list__profile {
-    width: 76px;
+    width: 100px;
     height: 32px;
-    margin-right: 38px;
     flex-shrink: 0;
-    border: none;
-    border-radius: 3px;
-    background: #3DDC84;
+    border-radius: 20px;
+    background: #313131;
     text-decoration: none;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    color: #FFF;
+    font-family: Inter, serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 16px; /* 114.286% */
 
 }
 
@@ -56,6 +91,9 @@
     }
 
     .nav-list {
+        display: none;
+    }
+    .nav-list__profile {
         display: none;
     }
 }
