--- a/src/components/BurgerMenu/BurgerMenu.css
+++ b/src/components/BurgerMenu/BurgerMenu.css
@@ -7,38 +7,21 @@
     width: 0;
     overflow-x: hidden;
     background-color: rgba(0, 0, 0, 0);
-    transition:  background-color 0.4s;
-    z-index: 1;
+    transition: background-color 0.4s;
+    z-index: 2;
 }
 
-.burger-menu::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: rgba(0, 0, 0, 0);
-    opacity: 0;
-    pointer-events: none;
-    transition: opacity 0.4s;
-}
 
 .burger-menu_open {
     background-color: rgba(0, 0, 0, 0.3);
     width: 100%;
 }
 
-.burger-menu_open::before {
-    opacity: 1;
-    pointer-events: auto;
-}
-
 .burger-menu__button {
     display: none;
     position: absolute;
     top: 15px;
-    right: 15px;
+    right: 30px;
     width: 44px;
     height: 44px;
     border: none;
@@ -46,15 +29,72 @@
     background-size: cover;
     background-color: transparent;
     background-image: url("../../images/icon__COLOR_icon-main.svg");
-    z-index: 2;
+    z-index: 3;
 
+}
+
+.burger-menu__button_active {
+    position: fixed;
+    background-image: url("../../images/CloseMenu.svg");
+    width: 32px;
+    height: 32px;
+    top: 22px;
+    right: 22px;
+}
+
+.burger-menu__list {
+    width: 100%;
+    align-items: center;
+    margin: 160px auto auto auto;
+    padding: 0;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    justify-content: space-evenly;
+    list-style: none;
 }
 
 .burger-menu__link {
+
+    width: fit-content;
+    margin-top: 29px;
+    color: #FFF;
+    text-align: center;
+    font-feature-settings: 'clig' off, 'liga' off;
+    font-family: Inter, serif;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+
+.burger-menu__link:first-child {
+    margin: 0;
+}
+
+.burger-menu__link:nth-child(2) {
+    border-bottom: 2px solid #fff;
+    padding-bottom: 4px;
+    margin-bottom: -4px;
 }
 
 .burger-menu__profile {
-
+    margin: 0 auto 90px auto;
+    width: 100px;
+    height: 32px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px;
+    background: #313131;
+    text-decoration: none;
+    color: #FFF;
+    font-family: Inter, serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 16px; /* 114.286% */
 }
 
 .burger-menu__content {
@@ -63,19 +103,20 @@
     padding: 0;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    flex-wrap: wrap;
     list-style: none;
     background-color: #202020;
     width: 68%;
     height: 100vh;
-    box-sizing: border-box;
     transform: translateX(100%);
     transition: transform 0.4s ease;
 }
 
+
+
 .burger-menu_open .burger-menu__content {
+    transition: transform 0.4s ease;
     transform: translateX(0%);
 }
 
@@ -89,5 +130,6 @@
         display: block;
 
     }
+
 
 }
