--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -21,7 +21,7 @@
 .register__form {
     width: 100%;
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
     align-items: center;
     flex-direction: column;
     font-family: 'Inter', serif;
