--- a/src/components/NotFound/NotFound.css
+++ b/src/components/NotFound/NotFound.css
@@ -1,10 +1,11 @@
 .not-found {
+    margin: 0 auto;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    height: 100vh;
-    width: 100%;
+    height: 126vh;
+    max-width: 1280px;
 
 }
 
@@ -47,4 +48,11 @@
 
 .not-found__link:hover {
     opacity: 0.6;
+}
+
+@media (max-width: 768px) {
+    .not-found {
+        height: 118vh;
+    }
+
 }
