--- a/src/pages/SavedMovies/SavedMovies.css
+++ b/src/pages/SavedMovies/SavedMovies.css
@@ -1,7 +1,8 @@
-.movies__hr {
+.saved-movies__hr {
     width: 90%;
     height: 1px;
     border-color: #424242;
+    margin: 0 auto;
 }
 
 .saved-movies .footer {
