--- a/src/components/FilterCheckbox/FilterCheckbox.css
+++ b/src/components/FilterCheckbox/FilterCheckbox.css
@@ -62,3 +62,9 @@
     font-weight: 400;
     line-height: 18px; /* 163.636% */
 }
+
+@media (max-width: 768px) {
+    .filter-checkbox {
+        margin: 41px 0 40px 0;
+    }
+}
