--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -1,9 +1,18 @@
 .login {
-    margin: 70px auto 0 auto;
+    /*margin: 70px auto 0 auto;*/
+    margin: 0 auto;
     max-width: 400px;
     display: flex;
     flex-direction: column;
+    height: 102vh;
 
+}
+
+.login__wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
 }
 
 .login__welcome {
@@ -120,6 +129,12 @@
     width: 100%;
     display: flex;
     justify-content: center;
+
+
+}
+
+
+.login__signin > p {
     color: #8B8B8B;
     text-align: center;
     font-family: Inter, serif;
@@ -130,7 +145,11 @@
 }
 
 
+
 .login__link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-left: 6px;
     text-decoration: none;
     color: #4285F4;
