--- a/src/pages/Register/Register.css
+++ b/src/pages/Register/Register.css
@@ -1,9 +1,19 @@
 .register {
-    margin: 70px auto 0 auto;
+    /*margin: 70px auto 0 auto;*/
+    margin: 0 auto;
     max-width: 400px;
     display: flex;
     flex-direction: column;
+    height: 102vh;
 
+
+}
+
+.register__wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
 }
 
 .register__welcome {
@@ -110,6 +120,10 @@
     width: 100%;
     display: flex;
     justify-content: center;
+
+}
+
+.register__signin > p {
     color: #8B8B8B;
     text-align: center;
     font-family: Inter, serif;
@@ -119,8 +133,10 @@
     line-height: normal;
 }
 
-
 .register__link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin-left: 6px;
     text-decoration: none;
     color: #4285F4;
@@ -144,4 +160,11 @@
     font-weight: 400;
     line-height: normal;
     text-align: start;
+}
+
+
+@media (max-width: 768px) {
+    .register {
+        height: 101vh;
+    }
 }
