--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -7,7 +7,7 @@
 .about-me__wrapper {
     display: grid;
     grid-template-columns: fit-content(600px)  1fr;
-    grid-auto-rows: 58px 20px 175px auto;
+    grid-auto-rows: 58px 20px fit-content(175px) 17px;
     grid-gap: 19px;
     margin-top: 65px;
 }
@@ -50,12 +50,13 @@
     font-weight: 400;
     line-height: 22px; /* 157.143% */
     grid-column: 1/2;
+
 }
 
 .about-me__photo {
     margin-left: 50px;
     grid-column: 2/3;
-    grid-row: 1/4;
+    grid-row: 1/5;
     width: 270px;
     height: 327px;
     border-radius: 10px;
@@ -98,7 +99,7 @@
     .about-me__wrapper {
         grid-template-columns: fit-content(359px) 1fr;
         margin-top: 65px;
-        grid-auto-rows: 40px 18px 183px auto;
+        grid-auto-rows: 40px 18px fit-content(183px) 17px;
         grid-row-gap: 16px;
 
     }
