--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -1,10 +1,10 @@
 .promo {
-    margin: 20px auto 0 auto;
+    margin: 20px 40px 0 40px;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    max-width: 1200px;
+    max-width: 1280px;
     flex-shrink: 0;
     border-radius: 10px;
     background: #272727;
@@ -37,6 +37,20 @@
         max-width: 669px;;
         line-height: 52px; /* 130% */
         letter-spacing: -1.6px;
+
+    }
+}
+
+@media (max-width: 320px ) {
+
+    .promo {
+        margin: 14px 14px 0 14px;
+        padding-top: 50px;
+    }
+    .promo__title {
+        font-size: 29px;
+        line-height: 37px; /* 127.586% */
+        letter-spacing: -1.16px;
 
     }
 }
