--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -1,4 +1,9 @@
 .promo {
+    max-width: 1280px;
+    margin: 0 auto;
+}
+
+.promo__wrapper {
     margin: 20px 40px 0 40px;
     display: flex;
     flex-direction: column;
@@ -25,7 +30,7 @@
 
 
 @media (max-width: 768px) {
-    .promo {
+    .promo__wrapper {
         padding-top: 180px;
         margin: 20px 20px 0 20px;
 
@@ -43,7 +48,7 @@
 
 @media (max-width: 320px ) {
 
-    .promo {
+    .promo__wrapper {
         margin: 14px 14px 0 14px;
         padding-top: 50px;
     }
