--- a/src/components/Title/Title.css
+++ b/src/components/Title/Title.css
@@ -15,3 +15,15 @@
     margin: 23px 0 0 0;
 
 }
+
+@media (max-width: 320px) {
+    .title {
+        font-size: 18px;
+        letter-spacing: -0.72px;
+    }
+
+    .hr__title {
+        margin: 28px 0 0 0;
+    }
+
+}
