--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -107,4 +107,39 @@
         letter-spacing: -0.48px;
     }
 
+
+}
+
+@media (max-width: 320px) {
+    .techs_bg_grey {
+        background: transparent;
+    }
+    .techs {
+        padding: 0;
+        margin: 128px 18px 0 18px;
+        min-height: 625px;
+    }
+    .techs__subtitle {
+        font-size: 30px;
+        letter-spacing: -1.2px;
+        margin-top: 50px;
+    }
+
+    .techs__text {
+        font-size: 11px;
+        line-height: 16px; /* 145.455% */
+        letter-spacing: -0.44px;
+        margin-top: 11px;
+    }
+    .techs-list {
+        display: grid;
+        grid-template-columns: 84px 84px;
+        justify-items: center;
+        grid-template-rows: auto;
+        grid-gap: 10px;
+        margin-top: 50px;
+    }
+    .techs-list__item {
+        margin: 0;
+    }
 }
