per-pixel 320: Portfolio.css

--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -76,3 +76,29 @@
         letter-spacing: -1.12px;
     }
 }
+
+@media (max-width: 680px) {
+    .portfolio {
+        margin: 70px 14px 0 14px;
+    }
+    .portfolio-list {
+        margin: 0;
+    }
+    .portfolio-list__item {
+        padding-bottom: 7px;
+    }
+    .portfolio__title {
+        font-size: 14px;
+        line-height: 20px; /* 142.857% */
+    }
+    .portfolio__link {
+        font-size: 18px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 28px; /* 155.556% */
+        letter-spacing: -0.72px;
+    }
+    .portfolio-nav {
+        margin: 21px 0 0 0;
+    }
+}
