--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -7,7 +7,7 @@
 .about-me__wrapper {
     display: grid;
     grid-template-columns: fit-content(600px)  1fr;
-    /*grid-auto-rows: 58px 20px fit-content(175px) 17px;*/
+    grid-auto-rows: 58px 20px fit-content(175px) 17px;
     grid-gap: 19px;
     margin-top: 65px;
 }
@@ -54,7 +54,7 @@
 }
 
 .about-me__photo {
-    margin-left: 50px;
+    /*margin-left: 50px;*/
     grid-column: 2/3;
     grid-row: 1/5;
     width: 270px;
@@ -100,7 +100,8 @@
     .about-me__wrapper {
         grid-template-columns: fit-content(359px) 1fr;
         margin-top: 65px;
-        /*grid-auto-rows: 40px 18px fit-content(183px) 17px;*/
+        /*grid-auto-rows: auto;*/
+        grid-auto-rows: 40px 18px fit-content(183px) 17px;
         grid-row-gap: 16px;
 
     }
@@ -114,7 +115,7 @@
 
 
 
-@media (max-width: 680px) {
+@media (max-width: 569px) {
     .about-me {
         max-width: 1140px;
         margin: 26px 14px 0 14px;
@@ -125,16 +126,16 @@
         margin-top: 59px;
         grid-gap: 17px;
         grid-template-rows: auto;
+        grid-auto-rows: auto;
 
 
 
     }
     .about-me__photo {
+        margin: 0 auto;
         grid-column: 1/2;
         width: 100%;
-        height: 352px;
-        /*width: 100%;*/
-        /*height: auto;*/
+        height: auto;
         grid-row: 1/2;
     }
 
@@ -150,10 +151,18 @@
         line-height: 16px; /* 145.455% */
     }
     .about-me__description {
+        max-width: 100%;
         font-size: 11px;
         line-height: 16px; /* 145.455% */
     }
     .about-me__github-link {
         margin-top: 7px;
+    }
+}
+
+@media (max-width: 320px) {
+    .about-me__photo {
+        width: 255px;
+        height: 307px;
     }
 }
