--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -86,6 +86,7 @@
     }
     .portfolio-list__item {
         padding-bottom: 7px;
+        width: 100%;
     }
     .portfolio__title {
         font-size: 14px;
@@ -100,5 +101,11 @@
     }
     .portfolio-nav {
         margin: 21px 0 0 0;
+    }
+    .portfolio__link-arrow {
+        text-align: end;
+        font-size: 18px;
+        line-height: 28px; /* 155.556% */
+        letter-spacing: -0.72px;
     }
 }
