--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -1,6 +1,7 @@
 .about-me {
-    max-width: 1140px;
-    margin: 110px auto 0 auto;
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 110px 70px 0 70px;
 
 }
 
@@ -41,7 +42,7 @@
 
 .about-me__description {
     max-width: 600px;
-    margin: 6px 0 0 0;
+    margin: 6px 0 99px 0;
     color: #FFF;
     font-feature-settings: 'clig' off, 'liga' off;
     font-family: Inter, serif;
@@ -77,6 +78,7 @@
 @media (max-width: 768px) {
     .about-me {
         margin: 91px 50px 0 50px;
+        padding: 0;
     }
 
     .about-me__name {
@@ -91,7 +93,7 @@
     }
 
     .about-me__description {
-        margin-top: 4px;
+        margin: 4px 0 87px 0;
         max-width: 359px;
         font-size: 12px;
         line-height: 18px; /* 150% */
@@ -127,9 +129,6 @@
         grid-gap: 17px;
         grid-template-rows: auto;
         grid-auto-rows: auto;
-
-
-
     }
     .about-me__photo {
         margin: 0 auto;
@@ -154,15 +153,14 @@
         max-width: 100%;
         font-size: 11px;
         line-height: 16px; /* 145.455% */
-    }
-    .about-me__github-link {
-        margin-top: 7px;
+        margin: 4px 0 23px 0;
+
     }
 }
 
 @media (max-width: 320px) {
     .about-me__photo {
-        width: 255px;
-        height: 307px;
+        height: 352px;
     }
+
 }
