--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -1,6 +1,7 @@
 .portfolio {
-    max-width: 1140px;
-    margin: 100px auto 0 auto;
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 100px 70px 0 70px;
 }
 
 .portfolio__title {
@@ -66,6 +67,7 @@
 @media (max-width: 768px) {
     .portfolio {
         margin: 90px 50px 0 50px;
+        padding: 0;
     }
     .portfolio-list {
         margin: 0;
