--- a/src/components/SearchForm/SearchForm.module.css
+++ b/src/components/SearchForm/SearchForm.module.css
@@ -42,3 +42,10 @@
     font-weight: 400;
     line-height: 18px; /* 128.571% */
 }
+
+@media (max-width: 320px) {
+    .searchInput {
+        height: 44px;
+        padding-left: 13px;
+    }
+}
