--- a/src/pages/SavedMovies/SavedMovies.css
+++ b/src/pages/SavedMovies/SavedMovies.css
@@ -19,3 +19,11 @@
         margin: 254px 30px 0 30px;
     }
 }
+
+@media (max-width: 560px) {
+    .saved-movies .footer{
+        margin: 231px 10px 0 10px
+
+    }
+}
+
